added close buttons and action for items

--- a/css/overflow.css
+++ b/css/overflow.css
@@ -9,22 +9,27 @@
   font-size: 1.4rem;
 }
 
-.overflow-header {/* border-bottom: 1px dashed #d8d8d8; */display: flex;justify-content: space-between;margin-bottom: 1.4rem;}
+.overflow-header {/* border-bottom: 1px dashed #d8d8d8; */display: flex;justify-content: space-between;margin-bottom: 1rem;}
 
 .overflow-list {list-style: none;}
 
-.overflow-item {cursor: pointer; margin-bottom: 0.3rem;}
-.overflow-item:hover::before {
+.overflow-item {cursor: pointer;margin-bottom: 0.3rem;padding-left: 1rem;left: -1rem;}
+/*.overflow-item:hover::before {
+
+}*/
+
+.overflow-item-close-btn {
   color: #a0a0a0;
-  content: 'x';
   font-size: 1.1rem;
   font-weight: 300;
   position: absolute;
-  line-height: 0;
+  line-height: 0.9rem;
   z-index: 8000;
   transform: translateY(-50%);
   top: 50%;
-  left: -1rem;
+  left: 0rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 .item-img {vertical-align: middle;display: inline-block;margin-right: 0.4rem;width: 1.5rem;}
@@ -44,7 +49,11 @@
 
 }
 
-.sort-select {margin-right: 1rem;}
+.sort-select {cursor: pointer;display: inline-block;margin-right: 1rem;}
+
+.sort-select:hover .sort-dropdown {
+  display: block;
+}
 
 .sort-checkbox {
 
@@ -53,5 +62,47 @@
 .sort-checkbox-label {
   
 }
-.sort-option {
 
+.sort-dropdown {
+  display: none;
+  background-color: #fff;
+  border: 1px solid #bbb;
+  list-style: none;
+  position: absolute;
+  right: 0;
+  top: 1.45rem;
+  z-index: 8000;
+}
+
+.sort-option {/* margin-bottom: 0.3rem; */padding: 0.3rem 0.6rem;}
+
+/*.sort-option:last-child {margin: 0;}*/
+
+.sort-option:hover {background-color: #ebfdfd;}
+
+.sort-value {border: 1px solid #b1b1b1;border-radius: 1.2px;padding: .25rem 0.4rem;width: 4rem;display: block;}
+
+
+.sort-value::before {
+  width: 0;
+  height: 0;
+  content: "";
+  position: absolute;
+  right: 0.2rem;
+  top: 0.25rem;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #969696;
+}
+
+.sort-value::after {
+  width: 0;
+  height: 0;
+  content: "";
+  position: absolute;
+  bottom: 0.25rem;
+  right: 0.2rem;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #969696;
+}
