--- a/css/overflow.css
+++ b/css/overflow.css
@@ -66,7 +66,7 @@
 }
 
 .sort-checkbox-label {
-  
+
 }
 
 .sort-dropdown {
@@ -111,4 +111,8 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid #969696;
+}
+
+.ji {
+  top: -15px;
 }
