--- a/css/overflow.css
+++ b/css/overflow.css
@@ -1,5 +1,13 @@
 @import url("defaults.css");
 
+.ibm {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.img-arrow {
+  margin-right: 1rem;
+}
 
 .dropdown-option {/* margin-bottom: 0.3rem; */padding: 0.3rem 0.6rem;}
 .dropdown-option:hover {background-color: #ebfdfd;}
